# docs/swagger.yaml
@@ -1,6 +1,70 @@
 basePath: /api
 definitions:
-  handlers.MovieDetailResponse:
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
+  internal_handlers.CreateMovieRequest:
+    properties:
+      actor_ids:
+        items:
+          type: integer
+        type: array
+      budget:
+        type: integer
+      country_id:
+        type: integer
+      director_ids:
+        items:
+          type: integer
+        type: array
+      genre_ids:
+        items:
+          type: integer
+        type: array
+      gross:
+        type: integer
+      language_ids:
+        items:
+          type: integer
+        type: array
+      plot:
+        type: string
+      runtime:
+        type: integer
+      tagline:
+        type: string
+      title:
+        type: string
+      writer_ids:
+        items:
+          type: integer
+        type: array
+      year:
+        type: integer
+    required:
+    - country_id
+    - title
+    - year
+    type: object
+  internal_handlers.CreateUserRequest:
+    properties:
+      password:
+        minLength: 6
+        type: string
+      username:
+        maxLength: 50
+        minLength: 3
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  internal_handlers.MovieDetailResponse:
     properties:
       average_rating:
         type: number
@@ -13,7 +77,7 @@ definitions:
       title:
         type: string
     type: object
-  handlers.MovieResponse:
+  internal_handlers.MovieResponse:
     properties:
       average_rating:
         type: number
@@ -24,13 +88,52 @@ definitions:
       title:
         type: string
     type: object
-  models.ErrorResponse:
+  movie-api_internal_models.Country:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  movie-api_internal_models.ErrorResponse:
     properties:
       error:
         example: error message
         type: string
     type: object
-  models.LoginRequest:
+  movie-api_internal_models.Genre:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  movie-api_internal_models.Language:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  movie-api_internal_models.LoginRequest:
     properties:
       password:
         example: senha123
@@ -39,13 +142,110 @@ definitions:
         example: admin
         type: string
     type: object
-  models.TokenResponse:
+  movie-api_internal_models.Movie:
+    properties:
+      actors:
+        items:
+          $ref: '#/definitions/movie-api_internal_models.Person'
+        type: array
+      budget:
+        type: integer
+      country:
+        $ref: '#/definitions/movie-api_internal_models.Country'
+      countryID:
+        type: integer
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      description:
+        type: string
+      directors:
+        items:
+          $ref: '#/definitions/movie-api_internal_models.Person'
+        type: array
+      genres:
+        items:
+          $ref: '#/definitions/movie-api_internal_models.Genre'
+        type: array
+      gross:
+        type: integer
+      id:
+        type: integer
+      languages:
+        items:
+          $ref: '#/definitions/movie-api_internal_models.Language'
+        type: array
+      metascore:
+        type: integer
+      rating:
+        type: number
+      roles:
+        items:
+          $ref: '#/definitions/movie-api_internal_models.Role'
+        type: array
+      runtime:
+        type: integer
+      tagline:
+        type: string
+      title:
+        type: string
+      updatedAt:
+        type: string
+      votes:
+        type: integer
+      writers:
+        items:
+          $ref: '#/definitions/movie-api_internal_models.Person'
+        type: array
+      year:
+        type: integer
+    type: object
+  movie-api_internal_models.Person:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  movie-api_internal_models.Role:
+    properties:
+      actor:
+        $ref: '#/definitions/movie-api_internal_models.Person'
+      character:
+        type: string
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      movie:
+        allOf:
+        - $ref: '#/definitions/movie-api_internal_models.Movie'
+        description: Explicit relationship definitions
+      movieID:
+        description: Foreign key for Movie
+        type: integer
+      personID:
+        description: Foreign key for Person
+        type: integer
+      updatedAt:
+        type: string
+    type: object
+  movie-api_internal_models.TokenResponse:
     properties:
       token:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
         type: string
     type: object
-host: localhost:8000
+host: 127.0.0.1:8000
 info:
   contact:
     email: support@movieapi.com
@@ -58,36 +258,6 @@ info:
   title: Movie API
   version: "1.0"
 paths:
-  /token:
-    post:
-      consumes:
-      - application/json
-      description: Authenticate user and get JWT token
-      parameters:
-      - description: User credentials
-        in: body
-        name: credentials
-        required: true
-        schema:
-          $ref: '#/definitions/models.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.TokenResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      summary: User login
-      tags:
-      - authentication
   /movies:
     get:
       description: Get all movies with average ratings
@@ -98,7 +268,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/handlers.MovieResponse'
+              $ref: '#/definitions/internal_handlers.MovieResponse'
             type: array
         "500":
           description: Internal Server Error
@@ -107,6 +277,41 @@ paths:
               type: string
             type: object
       summary: Get list of movies
+      tags:
+      - movies
+    post:
+      consumes:
+      - application/json
+      description: Create movie with relationships
+      parameters:
+      - description: Movie data
+        in: body
+        name: movie
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.CreateMovieRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.Movie'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new movie
       tags:
       - movies
   /movies/{id}:
@@ -124,7 +329,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handlers.MovieDetailResponse'
+            $ref: '#/definitions/internal_handlers.MovieDetailResponse'
         "400":
           description: Bad Request
           schema:
@@ -140,6 +345,71 @@ paths:
       summary: Get movie details
       tags:
       - movies
+  /token:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate user and get JWT token
+      parameters:
+      - description: User credentials
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/movie-api_internal_models.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.TokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+      summary: User login
+      tags:
+      - authentication
+  /users:
+    post:
+      consumes:
+      - application/json
+      description: Create a user account
+      parameters:
+      - description: User credentials
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/movie-api_internal_models.ErrorResponse'
+      summary: Register new user
+      tags:
+      - users
 securityDefinitions:
   BearerAuth:
     in: header
